Serve multiple chats simulatenously; refactoring into agent class

--- a/config.ini.tmpl
+++ b/config.ini.tmpl
@@ -2,7 +2,12 @@
 telegram_api_id = 12345678
 telegram_api_hash = 11aa22cc33dd44ee55ff667788990011
 openai_api_key = sk-ANWJDBSFNEDNAWHJSdasdAWgdNSDEAdakrdNARTDakwrdANb
+phone = +41123456789
 own_id = 987654321
-[chat]
-wait_with_reply = 10
-chat_title = Henriette Scammer
+
+[conversations]
+chats =
+    5373713193
+    Lena Olsen
+    Michelle Hike
+    6825726356
